--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@
  .promo-image img {
      width: 100%;
      height: 100%;
-     object-fit: cover;
+     object-fit: contain;
  }
 
  .promo-title {
